--- a/style.css
+++ b/style.css
@@ -39,25 +39,25 @@ body {
 }
 
 .single-box:nth-child(1) .img-area {
-  background: url("./bronze.svg");
+  background: url("./images/bronze.svg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
 }
 .single-box:nth-child(2) .img-area {
-  background: url("./silver.svg");
+  background: url("./images/silver.svg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
 }
 .single-box:nth-child(3) .img-area {
-  background: url("./gold.svg");
+  background: url("./images/gold.svg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
 }
 .single-box:nth-child(4) .img-area {
-  background: url("./platinum.svg");
+  background: url("./images/platinum.svg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
